@@ -304,9 +304,9 @@ sheet_object_graphic_print (SheetObject const *so, GnomePrintContext *ctx,
 		}
 
 		gnome_print_setrgbcolor (ctx,
-					 (double) sog->fill_color->red,
-					 (double) sog->fill_color->green,
-					 (double) sog->fill_color->blue);
+			sog->fill_color->red   / (double) 0xffff,
+			sog->fill_color->green / (double) 0xffff,
+			sog->fill_color->blue  / (double) 0xffff);
 
 		if (sog->type == SHEET_OBJECT_ARROW) {
 			double phi;
@@ -1001,9 +1001,9 @@ sheet_object_filled_print (SheetObject const *so, GnomePrintContext *ctx,
 	if (sof->outline_color) {
 		gnome_print_setlinewidth (ctx, sog->width);
 		gnome_print_setrgbcolor (ctx,
-					 (double) sof->outline_color->red,
-					 (double) sof->outline_color->green,
-					 (double) sof->outline_color->blue); 
+			sof->outline_color->red   / (double) 0xffff,
+			sof->outline_color->green / (double) 0xffff,
+			sof->outline_color->blue  / (double) 0xffff);
 		gnome_print_newpath (ctx);
 		if (sog->type == SHEET_OBJECT_OVAL)
 			make_ellipse (ctx, start_x, end_x, start_y, end_y);
@@ -1015,9 +1015,9 @@ sheet_object_filled_print (SheetObject const *so, GnomePrintContext *ctx,
 
 	if (sog->fill_color) {
 		gnome_print_setrgbcolor (ctx,
-					 (double) sog->fill_color->red,
-					 (double) sog->fill_color->green,
-					 (double) sog->fill_color->blue);
+			sog->fill_color->red   / (double) 0xffff,
+			sog->fill_color->green / (double) 0xffff,
+			sog->fill_color->blue  / (double) 0xffff);
 		gnome_print_newpath (ctx);
 		if (sog->type == SHEET_OBJECT_OVAL)
 			make_ellipse (ctx, start_x, end_x, start_y, end_y);
